tests/baselines/reference/assignmentCompatInterfaceWithStringIndexSignature.errors.txt
tests/cases/compiler/assignmentCompatInterfaceWithStringIndexSignature.ts(15,5): error TS2345: Argument of type 'Foo' is not assignable to parameter of type 'IHandlerMap'.


==== tests/cases/compiler/assignmentCompatInterfaceWithStringIndexSignature.ts (1 errors) ====
    interface IHandler {
        (e): boolean;
    }
    
    interface IHandlerMap {
        [type: string]: IHandler;
    }
    
    class Foo {
        public Boz(): void { }
    }
    
    function Biz(map: IHandlerMap) { }
    
    Biz(new Foo());
        ~~~~~~~~~
!!! error TS2345: Argument of type 'Foo' is not assignable to parameter of type 'IHandlerMap'.
    